# QiyamTime

./: LICENSES  README.md  TODO.md  privacy_policy_&_terms.txt  pyproject.toml  requirements.txt
.github/workflows/: build.yml  main.yml
.idx/: dev.nix
src/: app.py  main-oldpy  main.py
src/data/: prayer_data(04-2025).json
src/mypkg/: scrap_search.py
src/storage/data/: ahadiths.json  prayer_data(04-2025).json  prayer_data(05-2025).json  privacy_policy.txt
src/storage/logs/: log_history.json  time_selection.json  user_selections.json
src/views/: __init__.py  hadith_view.py  home.py  selection_view.py  time_view.py  timeline.py
src/views/__pycache__/: __init__.cpython-310.pyc.140208046448128  home.cpython-310.pyc.140045337833472  home.cpython-310.pyc.140344047512016  home.cpython-310.pyc.140461956917712  selection_view.cpython-310.pyc.140373298897392  timeline.cpython-310.pyc.140499759248080
src/widgets/: __init__.py  appbar.py  main_colomn.py
