[project]
name = "وقت القيام"
version = "1.0"

description = "تطبيق لتنظيم وقت قيام الليل تلقائياً أو يدوياً مع عرض بصري. | App to Organize Qiyam time automatically or manually with a visual view."
readme = "README.md"

requires-python = ">=3.9"
dependencies = [
  "flet==0.27.4",
  "flet-route==0.3.3",
  "geocoder==1.38.1",
  "requests==2.28.1",
]

authors = [{ name = "Omr Ashrf", email = "omr.ashrf.prog@gamil.com" }]

[tool.flet]
org = "com.mycompany"
product = "وقت القيام"
company = "mycompany"
copyright = "Copyright (C) 2025 by omrAshrf"

# assets = ["src/assets"]
app.module = "main" #--module-name
app.path = "src" # python_app_path
app.exclude = ["uiux"] #--exclude 

permissions = ["internet"] #--permissions

[tool.flet.android]
split_per_abi = true



